--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,22 +6,15 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #06B6D4;
-  --ifm-color-secondary: #22C55E;
-}
-
-/* Override button style for navbar enroll */
-.navbar-item--button .navbar__item {
-  padding: 0;
-}
-
-.navbar-item--button a.button {
-  border-radius: 4px;
-}
-
-/* Minor spacing adjustments for cards and sections */
-.card p {
-  margin-bottom: 0;
+  --ifm-color-primary: #2e8555;
+  --ifm-color-primary-dark: #29784c;
+  --ifm-color-primary-darker: #277148;
+  --ifm-color-primary-darkest: #205d3b;
+  --ifm-color-primary-light: #33925d;
+  --ifm-color-primary-lighter: #359962;
+  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
