--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -66,6 +66,9 @@
   font-size: var(--ifm-font-size-5xl);
   font-weight: 700;
   line-height: 1.1;
+  display: flex;
+  align-items: center; /* vertical center */
+  justify-content: center; /* horizontal center */
   margin-bottom: 1.5rem;
   color: var(--ifm-neutral-900);
   letter-spacing: -0.02em;
